[project]

name = "invrs_opt"
version = "v0.8.0"
description = "Algorithms for inverse design"
keywords = ["topology", "optimization", "jax", "inverse design"]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

authors = [
    {name = "Martin F. Schubert", email = "mfschubert@gmail.com"},
]
maintainers = [
    {name = "Martin F. Schubert", email = "mfschubert@gmail.com"},
]

dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "requests",
    "optax",
    "scipy",
    "totypes",
    "types-requests",
]

[project.optional-dependencies]
tests = [
    "parameterized",
    "pytest",
    "pytest-cov",
    "pytest-subtests",
]
dev = [
    "bump-my-version",
    "darglint",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"invrs_opt" = ["py.typed"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]  # Allow tests with same name in different dirs.
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.pydocstyle]
inherit = false
convention = "google"
